--- a/src/main/resources/qa.config.properties
+++ b/src/main/resources/qa.config.properties
@@ -1,1 +1,3 @@
 ServerUrl=http://ams.test.erdmg.com/
+DeviceConfigUrl=http://gen3-configuration-service.test.erdmg.com/
+reportConfigPath=src/test/java/features/extent-config.xml
